fix breadcrumbs display on mobile

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -36,6 +36,10 @@ button {
 
 .p {
   @apply mb-4;
+
+  &.p--flex {
+    @apply flex flex-wrap gap-2 items-center;
+  }
 }
 
 .ul {
